<resources>
    <string name="app_name">telemoveis_marcas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_principal_label">Menu Principal</string>
    <string name="sobre_fragment_label">Sobre...</string>
    <string name="next">Sobre</string>
    <string name="previous">Voltar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="telemoveis">Telemoveis</string>
    <string name="marcas">Marcas</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="sobre">Sobre</string>
    <string name="hugo_miguel_coimbra_dinis_n_1704652">Hugo Miguel Coimbra Dinis Nº 1704652</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_de_telemoveis_label">Telemoveis</string>
    <string name="lista_de_marcas_label">Marca</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="novo_telemovel_label">Novo Telemovel</string>
    <string name="descricaoModelo">Deve preencher com o nome do modelo</string>
    <string name="descricaoIndormacao">Descreva o estado do telemovel</string>
    <string name="descricaoAno">Preencha com o ano do telemovel</string>
    <string name="modelo">Modelo</string>
    <string name="infroma_o">Infromação</string>
    <string name="ano">Ano</string>
    <string name="marca">Marca</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ListaMarca_Lable">Marca</string>
    <string name="eliminar_telemovel_label">Eliminar Telemovel</string>
    <string name="marcaPrincipal">Inserir a Marca do Telemovel</string>
    <string name="nova_marca_label">Nova Marca</string>
    <string name="nomeMarca_obrigatorio">Nome Obrigatorio</string>
    <string name="imposivel_guardar_marca">Imposivel guardar marca</string>
    <string name="marca_guardada">Marca guardada com sucesso</string>
    <string name="telemovel_eliminado_com_sucesso">Telemovel eliminado com sucesso</string>
    <string name="erro_eliminar_telemovel">Erro ao eliminar telemovel</string>
    <string name="telemovel_guardado_com_sucesso">Telemovel guardado com sucesso</string>
    <string name="nao_foi_possivel_guarda_telemovel">Não foi possivel guardar o telemovel\n</string>
    <string name="editar_label">Editar Telemovel\n</string>
    <string name="eliminar_marca_label">Eliminar Marca</string>
    <string name="marca_eliminada_com_sucesso">Marca eliminada com sucesso</string>
    <string name="erro_ao_eliminar_marca">Erro ao eliminar Marca</string>
    <string name="editar_marca">Editar Marca</string>
    <string name="marca_alterada_com_sucesso">Marca alterada com sucesso</string>
    <string name="telemovel_pesquisa">Telemovel a pesquisar</string>
    <string name="pesquisa_label">Pesquisa</string>
</resources>