<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/ListaMarca_Lable"
    app:startDestination="@id/MenuPrincipalFragment">

    <fragment
        android:id="@+id/MenuPrincipalFragment"
        android:name="pt.exercicios.telemoveis_marcas.MenuPrincipalFragment"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragment_menu_principal">

        <action
            android:id="@+id/action_MenuPrincipalFragment_to_SobreFragment"
            app:destination="@id/SobreFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_listaDeTelemoveisFragment"
            app:destination="@id/ListaDeTelemoveisFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_listaMarcasFragment"
            app:destination="@id/ListaMarcasFragment" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragment"
        android:name="pt.exercicios.telemoveis_marcas.SobreFragment"
        android:label="@string/sobre_fragment_label"
        tools:layout="@layout/fragment_sobre">

        <action
            android:id="@+id/action_SobreFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaDeTelemoveisFragment"
        android:name="pt.exercicios.telemoveis_marcas.ListaDeTelemoveisFragment"
        android:label="@string/lista_de_telemoveis_label"
        tools:layout="@layout/fragment_lista_de_telemoveis">
        <action
            android:id="@+id/action_listaDeTelemoveisFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_ListaDeTelemoveisFragment_to_novoTelemovelFragment"
            app:destination="@id/novoTelemovelFragment" />
    </fragment>
    <fragment
        android:id="@+id/novoTelemovelFragment"
        android:name="pt.exercicios.telemoveis_marcas.NovoTelemovelFragment"
        android:label="@string/novo_telemovel_label"
        tools:layout="@layout/fragment_novo_telemovel">
        <action
            android:id="@+id/action_novoTelemovelFragment_to_ListaDeTelemoveisFragment"
            app:destination="@id/ListaDeTelemoveisFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaMarcasFragment"
        android:name="pt.exercicios.telemoveis_marcas.ListaMarcasFragment"
        android:label="fragment_lista_marcas"
        tools:layout="@layout/fragment_lista_marcas">
        <action
            android:id="@+id/action_listaMarcasFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
</navigation>